# keysat-client-python

./: .gitignore  README.md  pyproject.toml
examples/: offline_verify.py
src/keysat_licensing_client/: __init__.py  errors.py  fingerprint.py  key.py  online.py  pubkey.py  verify.py
tests/: test_crosscheck.py
